loader z-index fix

--- a/css/alakas-2019-black.webflow.css
+++ b/css/alakas-2019-black.webflow.css
@@ -1593,7 +1593,7 @@ img {
   top: 0%;
   right: 0%;
   bottom: 0%;
-  z-index: -1;
+  z-index: 0;
   display: inline-block;
   width: 100%;
   height: 100%;
